packages/app/client/src/ui/styles/themes/dark.css
html {
  /* Highlight colors */
  --list-item-color: var(--neutral-3);
  --list-item-selected-color: var(--neutral-2);
  --list-item-hover-bg: var(--neutral-13);
  --list-item-hover-border: 1px dashed transparent;
  --selected-list-item: #3F3F46;
  --focused-list-item: #073655;
  --focused-outline: 1px solid #0E369C;
  --focused-selected-highlighted-list-item: #3062D6;
  --focused-selected-list-item-bg: #3794FF;

  /* Alert colors */
  --info-bg: #063B49;
  --info-outline: #007ACC;

  --warning-bg: #352A05;
  --warning-outline: #B89500;

  --error-text: #F48771;
  --error-bg: #5A1D1D;
  --error-outline: #BE1100;

  /* webchat overridden colors */
  /* activity bubbles */
  --webchat-bg: var(--tab-active-tab-bg);
  --webchat-bubble-bg: var(--neutral-13);
  --webchat-bubble-text: var(--neutral-1);
  --webchat-bubble-text-weight: initial;
  --webchat-user-bubble-bg: #3062D6;
  --webchat-user-bubble-text: var(--neutral-1);
  --webchat-selected-activity-bg: #B89500;
  --webchat-selected-actvity-border: #0E369C;
  --webchat-selected-activity-text: var(--neutral-1);
  --webchat-timestamp-text: var(--neutral-6);
  --webchat-scrollbar-color: var(--scrollbar-color);

  /* sendbox */
  --webchat-sendbox-bg: var(--neutral-14);
  --webchat-sendbox-text: var(--neutral-1);
  --webchat-buttons-color: var(--neutral-1);
  --webchat-buttons-color-focus: var(--neutral-4);
  --webchat-buttons-dictate: #BE1100;

  /* transcript overlays */
  --webchat-transcript-overlay-bg: rgba(0, 0, 0, .6);
  --webchat-transcript-overlay-bg-focus: rgba(0, 0, 0, .8);
  --webchat-transcript-overlay-text: var(--neutral-1);
  --webchat-transcript-overlay-text-focus: var(--neutral-1);

  /* suggested actions */
  --webchat-sa-bg: var(--webchat-bubble-bg);
  --webchat-sa-border: solid 1px var(--neutral-4);
  --webchat-sa-text: #3794FF;

  /* bot state button */
  --bot-state-button-color: var(--neutral-6);
  --bot-state-button-color-focus: var(--neutral-1);
  --bot-state-diff-indicator-color: #A1260D;

  /* Log panel custom colors */
  --log-panel-timestamp: #47B07F;
  --log-panel-link: #9CDCFE;
  --log-panel-entry-hover-bg: var(--neutral-13);
  --log-panel-entry-inspected-bg: var(--neutral-10);
  --log-panel-item-info: var(--neutral-2);
  --log-panel-item-debug: var(--neutral-6);
  --log-panel-item-warn: var(--warning-outline);
  --log-panel-item-error: var(--error-text);

  /* nav bar custom colors */
  --nav-bar-bg: var(--neutral-13);
  --nav-icon-color: var(--neutral-1);
  --nav-icon-opacity: .6;
  --nav-icon-color-hover-opacity: 1;
  --nav-focused-tag-bg: #0E70C4;
  --nav-focused-tag-bg-opacity: 1;
  --nav-border-focus: 1px solid #00BCF2;
  --nav-link-selected-border: 1px solid transparent;
  --nav-link-selected-focus: 1px solid var(--nav-bar-bg);
  --nav-link-hover-border: 1px solid transparent;
  --nav-link-badge-color: var(--neutral-1);
  --nav-link-badge-bg: #FF0000;

  /* input[type="text"] */
  --input-color: var(--neutral-1);
  --input-bg: var(--neutral-15);
  --input-label-color: #C8C8C8;
  --input-label-color-disabled: var(--neutral-7);
  --input-border: 1px solid #C8C8C8;
  --input-border-focus: var(--p-button-border-focus);
  --input-border-error: 1px solid var(--error-outline);
  --input-placeholder-color: var(--neutral-7);
  --input-border-disabled: 1px solid var(--neutral-7);

  /* input[type="checkbox"] */
  --checkbox-checkmark-color: var(--neutral-1);
  --checkbox-checkmark-disabled-color: var(--neutral-8);
  --checkbox-border: 1px solid #3062D6;
  --checkbox-border-disabled: 1px solid var(--neutral-7);
  --checkbox-bg-disabled: var(--neutral-5);
  --checkbox-bg-checked: #3062D6;

  /* primary button */
  --p-button-color: var(--neutral-2);
  --p-button-color-disabled: var(--neutral-6);
  --p-button-border: 1px solid transparent;
  --p-button-border-focus: 1px solid #00BCF2;
  --p-button-border-hover: 1px solid transparent;
  --p-button-border-active: 1px solid transparent;
  --p-button-border-disabled: 1px solid transparent;
  --p-button-opacity-disabled: 1;
  --p-button-bg: #3062D6;
  --p-button-bg-focus: #3062D6;
  --p-button-bg-hover: #2852B2;
  --p-button-bg-active: #214494;
  --p-button-bg-disabled: var(--neutral-3);

  /* secondary button */
  --s-button-color: var(--neutral-15);
  --s-button-color-disabled: var(--neutral-3);
  --s-button-border: 1px solid transparent;
  --s-button-border-focused: var(--p-button-border-focus);
  --s-button-border-hover: 1px solid transparent;
  --s-button-border-active: 1px solid transparent;
  --s-button-border-disabled: 1px solid transparent;
  --s-button-opacity-disabled: 1;
  --s-button-bg: var(--neutral-3);
  --s-button-bg-focus: var(--neutral-3);
  --s-button-bg-hover: var(--neutral-4);
  --s-button-bg-active: var(--neutral-5);
  --s-button-bg-disabled: var(--neutral-2);

  /* Dialogs & Modals */
  --dialog-bg: var(--neutral-2);
  --dialog-color: var(--neutral-14);
  --dialog-error-color: var(--error-text);

  /* Services Explorer */
  --explorer-panel-bg: var(--neutral-14);
  --explorer-panel-name-color: var(--neutral-2);
  --explorer-panel-icon-color: var(--neutral-7);
  --explorer-panel-group-title-bg: var(--neutral-13);
  --explorer-panel-group-title-color: var(--neutral-4);
  --explorer-panel-group-border: 1px solid transparent;
  --explorer-panel-empty-message-color: var(--neutral-5);

  /* Explorer Bar */
  --explorer-bar-header-bg: var(--neutral-14);

  /* Tabs */
  --tab-color: var(--p-button-color);
  --tab-bar-bg: var(--explorer-panel-group-title-bg);
  --tab-bg: var(--neutral-13);
  --tab-border: 1px solid transparent;
  --tab-hover-border: 1px solid transparent;
  --tab-active-tab-inner-border: 1px solid transparent;
  --tab-active-tab-bg: var(--neutral-15);
  --tab-focus-border: var(--p-button-border-focus);
  --tab-separator-bg: var(--neutral-11);
  --tab-icon-color: var(--explorer-panel-group-title-color);
  --tab-icon-hover-color: var(--neutral-6);

  /* Notifications */
  --notification-bg: var(--neutral-13);
  --notification-message-color: var(--neutral-1);
  --notification-timestamp-color: var(--neutral-1);
  --notification-close-icon-color: var(--neutral-4);
  --notification-border: 1px solid transparent;
  --notifications-clear-all-btn-color: #3062D6;
  --notification-inner-border-display: none;
  --notification-inner-border: 1px solid transparent;

  /* toolbar */
  --toolbar-bg: var(--tab-active-tab-bg);
  --toolbar-border: none;
  --toolbar-border-bottom: 1px solid var(--neutral-13);
  --toolbar-icon-color: #00BCF2;
  --toolbar-text-color: var(--neutral-5);
  --toolbar-text-active: var(--neutral-1);
  --toolbar-button-hover-border: 1px solid transparent;
  --splitter-border: var(--toolbar-border-bottom);

  /* Welcome page */
  --welcome-page-bg: var(--tab-active-tab-bg);
  --welcome-page-ver: var(--neutral-8);
  --welcome-how-to-border: var(--neutral-6);
  --welcome-how-to-test: var(--p-button-bg);
  --welcome-beta-label: var(--warning-outline);
  --my-bots-well-bg: var(--neutral-13);
  --my-bots-well-border: 0;
  --my-bots-entry-bg: var(--neutral-12);
  --my-bots-entry-border: 1px solid transparent;
  --my-bots-entry-color: var(--neutral-3);
  --my-bots-path-color: var(--neutral--3);
  --my-bots-scrollbar-color: rgba(136,136,136,0.5);

  /* Status Bar */
  --status-bar-bg: #007ACC;
  --status-bar-color: #FFFFFF;

  /* Links */
  --link-color: #4080D0;
  --link-color-disabled: #C8C8C8;

  /* Split Button */
  --split-button-color: var(--neutral-5);
  --split-button-pressed-color: var(--neutral-1);
  --split-button-disabled-color: var(--neutral-7);
  --split-button-icon-color: #00BCF2;
  --split-button-hover-bg-color: var(--neutral-14);
  --split-button-hover-outline: transparent;
  --split-button-focus-outline: 1px solid #00BCF2;
  --split-button-selected-bg-color: var(--neutral-12);
  --split-button-selected-outline: transparent;
  --split-button-expanded-outline: transparent;
  --split-button-separator-bg-color: #C8C8C8;
  --split-button-panel-color: var(--neutral-16);
  --split-button-panel-bg-color: var(--neutral-1);
  --split-button-selected-item-bg-color: var(--neutral-3);

  /* Icons */
  --cosmos-db-contrast: var(--neutral-1);

  /* Scrollbar */
  --scrollbar-color: var(--neutral-6);

  /* accessory buttons */
  --accessory-button-color: var(--neutral-5);

  /* Auto Complete */
  --auto-complete-results-opacity: 0.9;

  /* Service Picker */
  --service-picker-list-bg-color: var(--neutral-3);
  --service-picker-list-border: 1px solid transparent;
  --service-picker-scrollbar-thumb: var(--scrollbar-color);
  --service-picker-scrollbar-track: var(--neutral-4);
  --service-picker-select-all-border: 1px solid transparent;

  /* Radio buttons */
  --radio-bg-color: var(--neutral-1);
  --radio-border-color: var(--neutral-16);
  --radio-selected-border-color: #3B99FC;

  /* MDI Component */
  --mdi-bg: var(--neutral-13);
  --mdi-img-bg: var(--neutral-13);
}

.dialog {
  --input-bg: var(--neutral-1);
  --input-label-color: var(--neutral-14);
  --input-label-color-disabled: #C8C8C8;
  --input-border: 1px solid #C8C8C8;
  --input-border-focus: 1px solid #00BCF2;
  --input-border-error: 1px solid var(--error-outline);
  --input-placeholder-color: var(--neutral-9);
  --input-border-disabled: 1px solid #C8C8C8;
}

